Added Modal instead of Alert

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -8,7 +8,7 @@
         <!-- <img src="/assets/images/logo.png" alt="" srcset=""> -->
         <h1 class="mb-4 pb-0">
           <span class="ng-text">NG</span>SriLanka 2019</h1>
-        <p class="mb-4 pb-0">Sri Lanka's First evert Angular Conference</p>
+        <p class="mb-4 pb-0">Sri Lanka's First ever Angular Conference</p>
 
       </div>
     </section>
