--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -5,12 +5,6 @@
 
 
 @media only screen and (max-device-width: 480px) {
-
-
-#landing-page {
-  background: url('/assets/images/about-bg.jpg') top center !important;
-}
-
 div#main-section {
   padding: 24px;
   top: 0 !important;
@@ -18,16 +12,42 @@ div#main-section {
 
 }
 
-
-#landing-page {
+/* Desktops and laptops ----------- */
+@media only screen  and (min-width : 1224px) {
+  #landing-page {
     width: 100%;
-    height: 100vh;
-    background: url('/assets/images/intro-bg.jpg') top center;
+    height: 125vh;
+    background: url('/assets/images/intro-bg/intro-bg-large.jpg') top center;
     /* background: url('/assets/images/about-bg.jpg') top center; */
     background-size: cover;
     position: relative;
   }
+  }
   
+  /* Large screens ----------- */
+  @media only screen  and (min-width : 1824px) {
+  #landing-page {
+    width: 100%;
+    height: 150vh;
+    background: url('/assets/images/intro-bg/intro-bg-large.jpg') top center;
+    /* background: url('/assets/images/about-bg.jpg') top center; */
+    background-size: cover;
+    position: relative;
+  }
+  }
+
+  /* Smartphones ----------- */
+@media only screen and (min-width : 321px) {
+  #landing-page {
+    width: 100%;
+    height: 150vh;
+    background: url('/assets/images/intro-bg/intro-bg-large.jpg') top center;
+    /* background: url('/assets/images/about-bg.jpg') top center; */
+    background-size: cover;
+    position: relative;
+  }
+  }
+
   
   #intro .intro-container {
    
