--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -13,11 +13,11 @@ div#main-section {
 }
 
 /* Desktops and laptops ----------- */
-@media only screen  and (min-width : 1224px) {
+@media only screen  and (min-width : 1824px) {
   #landing-page {
     width: 100%;
-    height: 125vh;
-    background: url('/assets/images/intro-bg/intro-bg-large.jpg') top center;
+    height: 150vh;
+    background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
     /* background: url('/assets/images/about-bg.jpg') top center; */
     background-size: cover;
     position: relative;
@@ -28,24 +28,313 @@ div#main-section {
   @media only screen  and (min-width : 1824px) {
   #landing-page {
     width: 100%;
-    height: 150vh;
-    background: url('/assets/images/intro-bg/intro-bg-large.jpg') top center;
+    height: 100vh;
+    background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
     /* background: url('/assets/images/about-bg.jpg') top center; */
     background-size: cover;
     position: relative;
   }
   }
-
-  /* Smartphones ----------- */
-@media only screen and (min-width : 321px) {
+  /* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   #landing-page {
     width: 100%;
-    height: 150vh;
-    background: url('/assets/images/intro-bg/intro-bg-large.jpg') top center;
+    height: 100vh;
+    background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
     /* background: url('/assets/images/about-bg.jpg') top center; */
     background-size: cover;
     position: relative;
   }
+  }
+  
+  /* Smartphones (landscape) ----------- */
+  @media only screen and (min-width : 321px) {
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* Smartphones (portrait) ----------- */
+  @media only screen and (max-width : 320px) {
+    #landing-page {
+      width: 100%;
+      height: 150vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* iPads (portrait and landscape) ----------- */
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* iPads (landscape) ----------- */
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* iPads (portrait) ----------- */
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  /**********
+  iPad 3
+  **********/
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  /* iPhone 4 ----------- */
+  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* iPhone 5 ----------- */
+  @media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* iPhone 6, 7, 8 ----------- */
+  @media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* iPhone 6+, 7+, 8+ ----------- */
+  @media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* iPhone X ----------- */
+  @media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* iPhone XS Max, XR ----------- */
+  @media only screen and (min-device-width: 414px) and (max-device-height: 896px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width: 414px) and (max-device-height: 896px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* Samsung Galaxy S3 ----------- */
+  @media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
+    #landing-page {
+      width: 100%;
+      height: 114vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* Samsung Galaxy S4 ----------- */
+  @media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  /* Samsung Galaxy S5 ----------- */
+  @media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
+  }
+  
+  @media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
+    #landing-page {
+      width: 100%;
+      height: 100vh;
+      background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
+      /* background: url('/assets/images/about-bg.jpg') top center; */
+      background-size: cover;
+      position: relative;
+    }
   }
 
   
