--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -18,4 +18,15 @@
     <app-mailchimp-form></app-mailchimp-form>
   </div>
 
+  
+
 </section>
+
+<div id="main-section">
+  <app-about></app-about>
+</div>
+
+<div id="main-section">
+    <app-speakers></app-speakers>
+  </div>
+
