venue and sponsor section

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -28,5 +28,20 @@
 
 <div id="main-section">
     <app-speakers></app-speakers>
-  </div>
+</div>
+
+<div id="main-section">
+  <app-sponsors></app-sponsors>
+</div>
+
+<div id="main-section">
+    <app-venue></app-venue>
+</div>
+
+<div id="main-section">
+    <app-footer></app-footer>
+</div>
+  
+
+
 
