--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -39,6 +39,10 @@
 </div>
 
 <div id="main-section">
+    <app-tickets></app-tickets>
+</div>
+
+<div id="main-section">
     <app-footer></app-footer>
 </div>
   
