--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -14,6 +14,10 @@
     margin-top: 150px;
 }
 
+#about {
+    min-height: 100vh;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     #abt-txt-title {
       font-size: 18px;
