--- a/src/app/components/speakers/speakers.component.css
+++ b/src/app/components/speakers/speakers.component.css
@@ -78,7 +78,7 @@ body {
     
     }
 
-    figure{
+    img{
         -webkit-transition: all 700ms ease;
     transition: all 700ms ease;
     }
@@ -115,11 +115,17 @@ body {
     color: #fff;
   }
   
-  figure:hover {
+  /* figure:hover {
     -webkit-transform : scale(0.9);
 	transform : scale(0.9);
   
+  } */
+
+  img:hover{
+    -webkit-transform :scale(1.03);
+	transform: scale(1.03);
   }
+	
 
   #speaker{
       margin-top: 7em;
