--- a/src/app/components/sponsors/sponsors.component.css
+++ b/src/app/components/sponsors/sponsors.component.css
@@ -44,6 +44,10 @@ section{
     cursor: pointer;
 }
 
+#sponsor {
+    min-height: 100vh;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     #sponsor{
         margin-top: 4em;
