--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,56 +1,22 @@
 <footer>
     <div class="container">
-        <div class="row justify-content-center">
-
-            <div class="col-md-4 col-12">
-                <div class="footer_box">
-                    <div class="footer_header">
-                        <div class="footer_logo">
-                            <img src="assets/img/logo.png" alt="evento">
-                        </div>
-                    </div>
-                    <div class="footer_box_body">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
-                        </p>
-                        <ul class="footer_social">
-                            <li>
-                                <a href="#"><i class="ion-social-pinterest"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-dribbble"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-instagram"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-4">
-                <div class="footer_box">
-                    <div class="footer_header">
-                        <h4 class="footer_title">
-                            Keep in touch
-                        </h4>
-                    </div>
-                    <div class="footer_box_body">
-                        <!-- <div class="newsletter_form">
-                            <input type="email" class="form-control" placeholder="E-Mail here">
-                            <button class="btn btn-rounded btn-block btn-primary">SUBSCRIBE</button>
-                        </div> -->
-                        <app-mailchimp-form></app-mailchimp-form>
-                    </div>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-sm">
+          <div class="col-sm-12">
+              <img src="../../../assets/images/logo.png" alt="ng-srilanka" class="img-responsive footer-image">
+              <app-social-icons-component></app-social-icons-component>
+          </div>
         </div>
+      
+        <div class="col-sm">
+          <div class="col-sm-12">
+              <h4 class="footer_title">
+                  Keep in touch
+              </h4>
+              <app-mailchimp-form></app-mailchimp-form>
+          </div>
+        </div>
+      </div>
     </div>
 </footer>
 <div class="copyright_footer">
