--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -8,7 +8,7 @@
 
       <div class="row justify-content-center align-items-center">
           <div class="col-md-9 text-md-left text-center color-light">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
+             Get your tickets now
           </div>
           <div class="col-md-3 text-md-right text-center">
               <a href="#" class="btn btn-primary btn-rounded mt30">buy now</a>
