--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,7 +14,60 @@
         </div>
       
         <div class="row">
-          <div class="col-sm-12 mrg-top">
+            <div class="row justify-content-center mt30">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="icon_box_one">
+                        <i class="lnr lnr-mic"></i>
+                        <div class="content">
+                            <h4>16 TALKS</h4>
+                            <p>
+                                Codebased talks and hands-on sessions on Angular and JavaScript
+                            </p>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="icon_box_one">
+                        <i class="lnr lnr-rocket"></i>
+                        <div class="content">
+                            <h4>SINGLE DAY</h4>
+                            <p>
+                                11 Hrs of in-depth learning in Angular and JavaScript
+                            </p>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="icon_box_one">
+                        <i class="lnr lnr-bullhorn"></i>
+                        <div class="content">
+                            <h4>Live Broadcast</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec graviante.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="icon_box_one">
+                        <i class="lnr lnr-users"></i>
+                        <div class="content">
+                            <h4>800+ DELEGATES</h4>
+                            <p>
+                                Industry Experts, 
+                    Enthusiastic Developers, 
+                    Project Managers and 
+                    Product Makers networking 
+                    andl earning together
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          <!-- <div class="col-sm-12 mrg-top">
             <h5><p class="txt-title">You Can Sit With Us</p></h5>
             <h5><p class="sub-txt-title">JUNE 29, 2019</p></h5>
           </div>
@@ -25,7 +78,7 @@
           <div class="row detail-sec-mrg">
             <div class="col-sm">
                 <h5>SINGLE DAY</h5>
-                <p>1 Hrs of in-depth 
+                <p>1 Hours of in-depth 
                     learning in Angular
                     and JavaScript</p>
             </div>
@@ -52,8 +105,8 @@
                     Product Makers networking 
                     andl earning together</p>
       
-            </div>
-          </div>
+            </div> -->
+          </div> 
         </div>
       
 </section>
