--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -20,9 +20,7 @@
                         <i class="lnr lnr-mic"></i>
                         <div class="content">
                             <h4>16 TALKS</h4>
-                            <p>
-                                Codebased talks and hands-on sessions on Angular and JavaScript
-                            </p>
+                            <p>Codebased talks and hands-on sessions on Angular and JavaScript</p>
                         </div>
                     </div>
                 </div>
@@ -32,9 +30,7 @@
                         <i class="lnr lnr-rocket"></i>
                         <div class="content">
                             <h4>SINGLE DAY</h4>
-                            <p>
-                                11 Hrs of in-depth learning in Angular and JavaScript
-                            </p>
+                            <p>11 Hrs of in-depth learning in Angular and JavaScript</p>
                         </div>
                     </div>
                 </div>
@@ -43,10 +39,8 @@
                     <div class="icon_box_one">
                         <i class="lnr lnr-bullhorn"></i>
                         <div class="content">
-                            <h4>Live Broadcast</h4>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec graviante.
-                            </p>
+                            <h4>16 SPEAKERS</h4>
+                            <p>Internationally recognized speakers and Local Industry Experts share their expertise</p>
                         </div>
                     </div>
                 </div>
@@ -56,57 +50,11 @@
                         <i class="lnr lnr-users"></i>
                         <div class="content">
                             <h4>800+ DELEGATES</h4>
-                            <p>
-                                Industry Experts, 
-                    Enthusiastic Developers, 
-                    Project Managers and 
-                    Product Makers networking 
-                    andl earning together
-                            </p>
+                            <p>Industry Experts, Enthusiastic Developers, Project Managers and Product Makers networking and learning together</p>
                         </div>
                     </div>
                 </div>
             </div>
-          <!-- <div class="col-sm-12 mrg-top">
-            <h5><p class="txt-title">You Can Sit With Us</p></h5>
-            <h5><p class="sub-txt-title">JUNE 29, 2019</p></h5>
-          </div>
-        </div>
-      </div>
-      
-      <div class="container">
-          <div class="row detail-sec-mrg">
-            <div class="col-sm">
-                <h5>SINGLE DAY</h5>
-                <p>1 Hours of in-depth 
-                    learning in Angular
-                    and JavaScript</p>
-            </div>
-            <div class="col-sm">
-                <h5>16 TALKS</h5>
-                <p>Codebased talks and 
-                    hands-on sessions on 
-                    angular andJ avaScript</p>
-                
-            </div>
-            <div class="col-sm">
-                <h5>16 SPEAKERS</h5>
-                <p>Internationally recognized 
-                    speakers and Local 
-                    Industry Experts share 
-                    their expertise</p>
-                
-            </div>
-            <div class="col-sm">
-                <h5>800+ DELEGATES</h5>
-                <p>Industry Experts, 
-                    Enthusiastic Developers, 
-                    Project Managers and 
-                    Product Makers networking 
-                    andl earning together</p>
-      
-            </div> -->
           </div> 
-        </div>
-      
+        </div>   
 </section>
