--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -414,6 +414,6 @@ div#main-section {
   /* width: 960px; */
   flex-direction: column;
   position: relative;
-  top: 15vh;
+  /* top: 15vh; */
 
 }
