--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -1,4 +1,4 @@
-<section class="sponsor section-spacing text-center" id="sponsor">
+<section class="sponsor section-spacing text-center" id="sponsors">
     <div class="container">
       <header>
         <h2>Sponsors</h2>
@@ -6,18 +6,18 @@
       </header>
       <div class="row">
         <div class="col-md-12">
-          <figure><img src="../../../assets/images/sponsors/sponsor-1.png" data-at2x="img/sponsor/sponsor-1@2x.png" alt="sponsor"></figure>
-          <figure><img src="../../../assets/images/sponsors/sponsor-2.png" data-at2x="img/sponsor/sponsor-2@2x.png" alt="sponsor"></figure>
-          <figure><img src="../../../assets/images/sponsors/sponsor-3.png" data-at2x="img/sponsor/sponsor-3@2x.png" alt="sponsor"></figure>
-          <figure><img src="../../../assets/images/sponsors/sponsor-4.png" data-at2x="img/sponsor/sponsor-4@2x.png" alt="sponsor"></figure>
+          <figure><img src="../../../assets/images/sponsors/sponsor-1.png"  alt="sponsor"></figure>
+          <figure><img src="../../../assets/images/sponsors/sponsor-2.png"  alt="sponsor"></figure>
+          <figure><img src="../../../assets/images/sponsors/sponsor-3.png"  alt="sponsor"></figure>
+          <figure><img src="../../../assets/images/sponsors/sponsor-4.png"  alt="sponsor"></figure>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <figure><img src="../../../assets/images/sponsors/sponsor-5.png" data-at2x="img/sponsor/sponsor-5@2x.png" alt="sponsor"></figure>
-          <figure><img src="../../../assets/images/sponsors/sponsor-6.png" data-at2x="img/sponsor/sponsor-6@2x.png" alt="sponsor"></figure>
-          <figure><img src="../../../assets/images/sponsors/sponsor-7.png" data-at2x="img/sponsor/sponsor-7@2x.png" alt="sponsor"></figure>
-          <figure><img src="../../../assets/images/sponsors/sponsor-8.png" data-at2x="img/sponsor/sponsor-8@2x.png" alt="sponsor"></figure>
+          <figure><img src="../../../assets/images/sponsors/sponsor-5.png"  alt="sponsor"></figure>
+          <figure><img src="../../../assets/images/sponsors/sponsor-6.png"  alt="sponsor"></figure>
+          <figure><img src="../../../assets/images/sponsors/sponsor-7.png"  alt="sponsor"></figure>
+          <figure><img src="../../../assets/images/sponsors/sponsor-8.png"  alt="sponsor"></figure>
         </div>
       </div>
       <div class="row btm-margin">
