--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,14 +2,14 @@
     <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2  id="abt-txt-title" class="txt-title">2019 ng-SriLanka Conference</h2>
+            <h2  id="abt-txt-title" class="txt-title">Ng-SriLanka Conference 2019 </h2>
             <h3 class="cmb-title">Colombo</h3>
           </div>   
         </div>
       
         <div class="row">
           <div class="col-md-12 mrg-top">
-            <h6 class="txt-title">ng-SriLanka is the cardinal event organized by the Angular community of SriLanka.</h6>
+            <h6 class="txt-title-sub">ng-SriLanka is the cardinal event organized by the Angular community of SriLanka.</h6>
           </div>
         </div>
       
@@ -20,7 +20,7 @@
                         <i class="lnr lnr-mic"></i>
                         <div class="content">
                             <h4>16 TALKS</h4>
-                            <p>Codebased talks and hands-on sessions on Angular and JavaScript</p>
+                            <p>Code based talks and hands-on sessions on Angular and JavaScript</p>
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                         <i class="lnr lnr-rocket"></i>
                         <div class="content">
                             <h4>SINGLE DAY</h4>
-                            <p>11 Hrs of in-depth learning in Angular and JavaScript</p>
+                            <p>11 Hours of in-depth learning in Angular and JavaScript</p>
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                         <i class="lnr lnr-bullhorn"></i>
                         <div class="content">
                             <h4>16 SPEAKERS</h4>
-                            <p>Internationally recognized speakers and Local Industry Experts share their expertise</p>
+                            <p>Internationally recognized speakers and local industry experts share their expertise</p>
                         </div>
                     </div>
                 </div>
@@ -50,11 +50,12 @@
                         <i class="lnr lnr-users"></i>
                         <div class="content">
                             <h4>800+ DELEGATES</h4>
-                            <p>Industry Experts, Enthusiastic Developers, Project Managers and Product Makers networking and learning together</p>
+                            <p>Industry experts, Enthusiastic developers, Project managers and Product makers networking and learning together</p>
                         </div>
                     </div>
                 </div>
             </div>
           </div> 
-        </div>   
+        </div>
+        <div id="speaker"></div>   
 </section>
