--- a/src/app/components/common/header-component/header-component.component.html
+++ b/src/app/components/common/header-component/header-component.component.html
@@ -8,17 +8,11 @@
       </a>
     </div>
 
-    <!-- <div id="logo" class="pull-left">
-      <a href="#intro" class="scrollto">
-        <img src="assets/images/logo.png" alt="" title="">
-      </a>
-    </div> -->
-
     <nav id="nav-menu-container">
       <ul class="nav-menu">
-        <li class="menu-active"><a href="#intro">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#speakers">Speakers</a></li>
+        <li><a href="#speaker">Speakers</a></li>
         <li><a href="#sponsors">Sponsors</a></li>
         <li><a href="#contact">Contact</a></li>
         <li class="buy-tickets"><a href="#buy-tickets">Tickets</a></li>
