--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -31,13 +31,13 @@
                         <a href="#">Contact</a>
                     </li>
                     <li>
-                        <a href="#">Sponsors</a>
+                        <a href="#sponsors">Sponsors</a>
                     </li>
                     <li>
-                        <a href="#">Speakers</a>
+                        <a href="#speakers">Speakers</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
                         <a href="#">Home</a>
