--- a/src/app/components/speakers/speakers.component.html
+++ b/src/app/components/speakers/speakers.component.html
@@ -1,4 +1,4 @@
-<section class="speaker section-spacing text-center" id="speaker">
+<section class="speaker section-spacing text-center" id="speakers">
     <div class="container">
       <header>
         <div class="row">
@@ -11,28 +11,20 @@
       <div class="row">
                 <div class="col-sm-3 shrink-div" *ngFor="let speaker of speakers">
                     <div class="item shrink"> 
-                        <!--event-speaker-->
                         <div class="event-speaker">
                           <figure> <img src="../../assets/images/speakers/{{speaker.imagePath}}" alt="event-speaker" data-no-retina>
                             <figcaption>
                               <h4>{{ speaker.name }}</h4>
                               <p>{{ speaker.company}}</p>
-                              <!--social-->
                               <ul class="social">
                                 <li><a href="https://twitter.com/{{ speaker.twitter}}" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="https://github.com/{{speaker.github}}" target="_blank"><i class="fa fa-github-alt"></i></a></li>
                               </ul>
-                              <!--social end--> 
                             </figcaption>
                           </figure>
-                          </div>
-                        <!--event-speaker end--> 
+                        </div>
                       </div>
-                
-
-
-        
-      </div>
-    </div>
-   </div>
-  </section>
+                  </div>
+            </div>
+        </div>
+</section>
