--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -1,8 +1,8 @@
-<section id="tickets">
+<section id="buy-tickets">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2>Get your tikets</h2>
+        <h2>Get your tickets</h2>
       </div>
     </div>
 
