--- a/src/app/components/common/header-component/header-component.component.html
+++ b/src/app/components/common/header-component/header-component.component.html
@@ -3,7 +3,7 @@
 
 
     <div id="logo">
-      <a href="#intro" class="scrollto">
+      <a href="#" class="scrollto">
         <img src="assets/images/logo.png" alt="" title="">
       </a>
     </div>
@@ -11,11 +11,11 @@
     <nav id="nav-menu-container">
       <ul class="nav-menu">
         <li><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about-event">About</a></li>
         <li><a href="#speaker">Speakers</a></li>
-        <li><a href="#sponsors">Sponsors</a></li>
+        <li><a href="#event-sponsors">Sponsors</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li class="buy-tickets"><a href="#buy-tickets">Tickets</a></li>
+        <li class="buy-tickets"><a href="#tickets">Tickets</a></li>
       </ul>
     </nav>
 
