--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -15,6 +15,7 @@
     <app-social-icons-component></app-social-icons-component>
 
     <app-mailchimp-form></app-mailchimp-form>
+    <div id="about-event"></div>
   </div>
 
   
