--- a/src/app/components/venue/venue.component.css
+++ b/src/app/components/venue/venue.component.css
@@ -50,3 +50,10 @@
       height: 250px;
       margin-top: 25vh;
   }
+
+  #tickets {
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    bottom: 0;
+  }
