--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -21,6 +21,10 @@
   
 
 </section>
+<!-- <app-nav></app-nav>
+<div id="main-section">
+  <app-home></app-home>
+</div> -->
 
 <div id="main-section">
   <app-about></app-about>
