--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,9 +1,8 @@
 #home {
     width: 100%;
-    height: 90vh;
-    background: url('/assets/images/intro-bg/intro-bg.jpg') top center;
-    /* background: url('/assets/images/about-bg.jpg') top center; */
+    height: 100vh;
+    background: url('/assets/images/intro-bg/intro-bg.jpg');
     background-size: cover;
-    padding-top: 10vh;
+    background-position: center;
     
 }
