--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -39,7 +39,7 @@
           
             <div class="col-md-3 col-12">
                 <div class="price_box active">
-                   <div class="price_header">
+                   <div class="price_header bronze">
                        <h4>
                           Bronze
                        </h4>
@@ -65,14 +65,14 @@
                         </ul>
                     </div>
                     <div class="price_footer">
-                        <span class="badge badge-primary badge-price">$ 250</span>
+                        <span class="badge badge-primary badge-price bronze-bac">$ 250</span>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3 col-12">
                 <div class="price_box active">
-                   <div class="price_header">
+                   <div class="price_header silver">
                        <h4>
                           Silver
                        </h4>
@@ -107,14 +107,14 @@
                         </ul>
                     </div>
                     <div class="price_footer">
-                        <span class="badge badge-primary badge-price">$ 250</span>
+                        <span class="badge badge-primary badge-price silver-bac">$ 500</span>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3 col-12">
                 <div class="price_box active">
-                   <div class="price_header">
+                   <div class="price_header gold">
                        <h4>
                           Gold
                        </h4>
@@ -155,14 +155,14 @@
                         </ul>
                     </div>
                     <div class="price_footer">
-                        <span class="badge badge-primary badge-price">$ 250</span>
+                        <span class="badge badge-primary badge-price gold-bac">$ 750</span>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3 col-12">
                 <div class="price_box active">
-                   <div class="price_header">
+                   <div class="price_header platinum">
                        <h4>
                           Platinum
                        </h4>
@@ -212,7 +212,7 @@
                         </ul>
                     </div>
                     <div class="price_footer">
-                        <span class="badge badge-primary badge-price">$ 250</span>
+                        <span class="badge badge-primary badge-price platinum-bac">$ 1000</span>
                     </div>
                 </div>
             </div>
