--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,37 @@
-<section id="home">
+<section id="home" class="img-fluid">
+
+    <div class="content-middle">
+            <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12">   
+                            <h1><span>NG</span>SriLanka 2019 </h1>
+                        </div>
+                            <div class="col-sm-12">
+                                <p>Sri Lanka's first ever Angular Conference</p>
+                            </div>     
+                        </div>
+                    </div>
+            
+                <app-social-icons-component></app-social-icons-component>
+            
+                <app-mailchimp-form></app-mailchimp-form>
+            
+    </div>
+   
+        <!-- <div id="main-section">
+                <section id="intro">
+                  <div class="intro-container wow fadeIn">
+                    <h1 class="mb-4 pb-0">
+                      <span class="ng-text">NG</span>SriLanka 2019</h1>
+                    <p class="mb-4 pb-0">Sri Lanka's first ever Angular Conference</p>
+            
+                  </div>
+                </section>
+            
+                <app-social-icons-component></app-social-icons-component>
+            
+                <app-mailchimp-form></app-mailchimp-form>
+                <div id="about-event"></div>
+              </div> -->
 
 </section>
