--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 
-<section id="landing-page">
+<!-- <section id="landing-page">
     <app-header-component></app-header-component>
   
   <div id="main-section">
@@ -21,32 +21,33 @@
   
 
 </section>
-<!-- <app-nav></app-nav>
-<div id="main-section">
-  <app-home></app-home>
-</div> -->
+<app-nav></app-nav> -->
 
-<div id="main-section">
+<div>
+  <app-home></app-home>
+</div>
+
+<div>
   <app-about></app-about>
 </div>
 
-<div id="main-section">
+<div>
     <app-speakers></app-speakers>
 </div>
 
-<div id="main-section">
+<div>
   <app-sponsors></app-sponsors>
 </div>
 
-<div id="main-section">
+<div>
     <app-venue></app-venue>
 </div>
 
-<div id="main-section">
+<div>
     <app-tickets></app-tickets>
 </div>
 
-<div id="main-section">
+<div>
     <app-footer></app-footer>
 </div>
   
