sponsor component updates

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row card-row justify-content-center">
           
-            <div class="col-md-3 col-12">
+            <div class="col-lg-3 col-md-6 col-12">
                 <div class="price_box active">
                    <div class="price_header bronze">
                        <h4>
@@ -65,12 +65,12 @@
                         </ul>
                     </div>
                     <div class="price_footer">
-                        <span class="badge badge-primary badge-price bronze-bac">$ 250</span>
+                        <span class="badge badge-primary badge-price bronze-bac w-100">$ 250</span>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-3 col-12">
+            <div class="col-lg-3 col-md-6 col-12">
                 <div class="price_box active">
                    <div class="price_header silver">
                        <h4>
@@ -107,12 +107,12 @@
                         </ul>
                     </div>
                     <div class="price_footer">
-                        <span class="badge badge-primary badge-price silver-bac">$ 500</span>
+                        <span class="badge badge-primary badge-price silver-bac w-100">$ 500</span>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-3 col-12">
+            <div class="col-lg-3 col-md-6 col-12">
                 <div class="price_box active">
                    <div class="price_header gold">
                        <h4>
@@ -155,12 +155,12 @@
                         </ul>
                     </div>
                     <div class="price_footer">
-                        <span class="badge badge-primary badge-price gold-bac">$ 750</span>
+                        <span class="badge badge-primary badge-price gold-bac w-100">$ 750</span>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-3 col-12">
+            <div class="col-lg-3 col-md-6 col-12">
                 <div class="price_box active">
                    <div class="price_header platinum">
                        <h4>
@@ -212,7 +212,7 @@
                         </ul>
                     </div>
                     <div class="price_footer">
-                        <span class="badge badge-primary badge-price platinum-bac">$ 1000</span>
+                        <span class="badge badge-primary badge-price platinum-bac w-100">$ 1000</span>
                     </div>
                 </div>
             </div>
